--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 		<div id='status-notice' class='godot' style='display: none;'></div>
 	</div>
 
-	<script type='text/javascript' src='Minesweeper.js'></script>
+	<script type='text/javascript' src='OsoFight.js'></script>
 	<script type='text/javascript'>//<![CDATA[
 
 		var engine = new Engine;
@@ -142,7 +142,7 @@
 
 		(function() {
 
-			const MAIN_PACK = 'Minesweeper.pck';
+			const MAIN_PACK = 'OsoFight.pck';
 			const INDETERMINATE_STATUS_STEP_MS = 100;
 
 			var canvas = document.getElementById('canvas');
